feat(video-service): adiciona listagem paginada de vídeos por usuário